// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHighlight behavior loose matching matches strings with different casing 1`] = `
<span>
  different 
  <mark
    class="euiMark css-qs5b6n-euiMarkStyles"
  >
    case
  </mark>
   match
</span>
`;

exports[`EuiHighlight behavior matching applies to all matches 1`] = `
<span>
  <mark
    class="euiMark css-qs5b6n-euiMarkStyles"
  >
    match
  </mark>
   
  <mark
    class="euiMark css-qs5b6n-euiMarkStyles"
  >
    match
  </mark>
   
  <mark
    class="euiMark css-qs5b6n-euiMarkStyles"
  >
    match
  </mark>
</span>
`;

exports[`EuiHighlight behavior matching hasScreenReaderHelpText can be false 1`] = `
<span>
  <mark
    class="euiMark css-1pode0c-euiMarkStyles"
  >
    match
  </mark>
   
  <mark
    class="euiMark css-1pode0c-euiMarkStyles"
  >
    match
  </mark>
   
  <mark
    class="euiMark css-1pode0c-euiMarkStyles"
  >
    match
  </mark>
</span>
`;

exports[`EuiHighlight behavior matching only applies to first match 1`] = `
<span>
  <mark
    class="euiMark css-qs5b6n-euiMarkStyles"
  >
    match
  </mark>
   match match
</span>
`;

exports[`EuiHighlight behavior strict matching doesn't match strings with different casing 1`] = `
<span>
  different case match
</span>
`;

exports[`EuiHighlight is rendered 1`] = `
<span
  aria-label="aria-label"
  class="testClass1 testClass2"
  data-test-subj="test subject string"
>
  value
</span>
`;
